--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -10,21 +10,167 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: Raleway, Roboto;
 }
 
 .container {
-  width: 1190px;
+  width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
 }
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+img {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+}
+
+button {
+  cursor: pointer;
+  border: none;
+}
+
+/* button:focus {
+    outline: none;
+}
+
+a:focus {
+    outline: none;
+} */
+input {
+  padding: 0;
+  outline: none;
+}
+
+@keyframes from-up {
+  0% {
+    transform: translateY(-300px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+@keyframes from-left {
+  0% {
+    transform: translateX(-300px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+@keyframes from-right {
+  0% {
+    transform: translateX(300px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+@keyframes from-down {
+  0% {
+    transform: translateY(300px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+@keyframes from-up {
+  0% {
+    transform: translateY(-300px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+@keyframes from-left {
+  0% {
+    transform: translateX(-300px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+@keyframes from-right {
+  0% {
+    transform: translateX(300px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+@keyframes from-down {
+  0% {
+    transform: translateY(300px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
 .header {
   padding-top: 24px;
   padding-bottom: 25px;
-  border: var(--border-linia) 1px solid;
+  background-color: var(--accent-color);
+  width: 100%;
   animation-name: from-up;
   animation-duration: 1s;
+  border: var(--border-linia) 1px solid;
 }
 
 .header-container {
@@ -45,19 +191,19 @@ body {
 .header-logo1 {
   color: var(--hover-color);
   font-size: 26px;
-  font-family: Raleway;
   line-height: normal;
   font-weight: 700;
   letter-spacing: 0.03em;
+  font-family: Raleway;
 }
 
 .header-logo2 {
   color: var(--logo-text-color);
   font-size: 26px;
-  font-family: Raleway;
   line-height: normal;
   font-weight: 700;
   letter-spacing: 0.03em;
+  font-family: Raleway;
 }
 
 .header-list {
@@ -68,16 +214,17 @@ body {
 }
 
 .header-link {
-  position: relative;
   color: var(--text-color);
   font-size: 14px;
   font-weight: 500;
   line-height: normal;
   letter-spacing: 0.02em;
   text-decoration: none;
+  position: relative;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: color;
   transition-duration: 250ms;
+  font-family: Roboto;
 }
 
 .header-link:hover {
@@ -114,9 +261,6 @@ body {
 
 .header-item:hover .header-link::after {
   opacity: 1;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: color;
-  transition-duration: 250ms;
 }
 
 .header-autorisations {
@@ -157,6 +301,7 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: color;
   transition-duration: 250ms;
+  font-family: Roboto;
 }
 
 .header-contacts:hover {
@@ -206,8 +351,6 @@ body {
   cursor: pointer;
 }
 
-/* Hero Section */
-
 .hero-section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -235,6 +378,7 @@ body {
   padding: 6px 22px;
   outline: none;
   border: none;
+  font-family: Roboto;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: background-color, box-shadow;
   transition-duration: 250ms;
@@ -248,15 +392,15 @@ body {
   line-height: 1.6;
   border-radius: 4px;
   background-color: var(--hover-color);
-  box-shadow: 0px 2px 2px 0px #0000001f, 0px 1px 2px 0px #00000014,
-    0px 3px 1px 0px #0000001a;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1215686275), 0px 1px 2px 0px rgba(0, 0, 0, 0.0784313725), 0px 3px 1px 0px rgba(0, 0, 0, 0.1019607843);
 }
 
 .hero-posters {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  column-gap: 30px;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
   row-gap: 30px;
 }
 
@@ -298,6 +442,7 @@ body {
   letter-spacing: 0.54px;
   position: absolute;
   opacity: 1;
+  font-family: Roboto;
 }
 
 .hero-overlay-text {
@@ -308,7 +453,7 @@ body {
 }
 
 .hero-poster {
-  flex-basis: ((100% - 2 * 30px) / 3);
+  flex-basis: calc((100% - 60px) / 3);
   background-color: var(--accent-color);
   border: 1px solid #eeeeee;
 }
@@ -334,7 +479,8 @@ body {
 }
 
 .hero-subtext {
-  color: #fff;
+  color: #FFF;
+  font-family: Roboto;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -344,8 +490,7 @@ body {
 
 .hero-poster:hover,
 .hero-link:focus {
-  box-shadow: 1px 4px 6px 0px #00000029, 0px 4px 4px 0px #0000000f,
-    0px 1px 1px 0px #0000001f;
+  box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.1607843137), 0px 4px 4px 0px rgba(0, 0, 0, 0.0588235294), 0px 1px 1px 0px rgba(0, 0, 0, 0.1215686275);
   cursor: pointer;
 }
 
@@ -359,6 +504,7 @@ body {
   margin-bottom: 4px;
   padding-left: 24px;
   padding-right: 24px;
+  font-family: Roboto;
 }
 
 .hero-text {
@@ -370,6 +516,7 @@ body {
   padding-bottom: 20px;
   padding-left: 24px;
   padding-right: 24px;
+  font-family: Roboto;
 }
 
 footer {
@@ -409,6 +556,7 @@ footer {
   letter-spacing: 0.03em;
   margin-bottom: 20px;
   word-wrap: break-word;
+  font-family: Raleway;
 }
 
 .footer-logo2 {
@@ -419,6 +567,7 @@ footer {
   font-weight: 700;
   letter-spacing: 0.03em;
   margin-bottom: 20px;
+  font-family: Raleway;
 }
 
 .footer-address {
@@ -431,6 +580,7 @@ footer {
   font-style: normal;
   margin-bottom: 9px;
   display: block;
+  font-family: Roboto;
 }
 
 .footer-email {
@@ -443,6 +593,7 @@ footer {
   margin-bottom: 9px;
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
+  font-family: Roboto;
 }
 
 .footer-phone {
@@ -453,6 +604,7 @@ footer {
   letter-spacing: 0.03em;
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
+  font-family: Roboto;
 }
 
 .footer-icons {
@@ -468,11 +620,13 @@ footer {
   letter-spacing: 0.42px;
   text-transform: uppercase;
   margin-bottom: 20px;
+  font-family: Roboto;
 }
 
 .footer-icon-list {
   display: flex;
-  column-gap: 10px;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
 }
 
 .footer-contacts {
@@ -518,6 +672,7 @@ footer {
   letter-spacing: 0.42px;
   text-transform: uppercase;
   margin-bottom: 20px;
+  font-family: Roboto;
 }
 
 .basement-form-input {
@@ -531,6 +686,16 @@ footer {
   margin-right: 12px;
   padding-left: 16px;
   color: #fff;
+}
+
+.basement-form-input::-moz-placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.48px;
 }
 
 .basement-form-input::placeholder {
@@ -571,4 +736,4 @@ footer {
   padding-top: 3px;
   padding-bottom: 3px;
   fill: #fff;
-}
+}/*# sourceMappingURL=portfolio.css.map */
