--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background-color: var(--background-color-accent);
+    background-color: $background-color-accent;
     padding-top: 60px;
     padding-bottom: 60px;
     animation-name: from-down;
@@ -27,7 +27,7 @@ footer {
   }
   
   .footer-logo1 {
-    color: var(--hover-color);
+    color: $hover-color;
     font-size: 26px;
     font-family: Raleway;
     line-height: normal;
@@ -39,7 +39,7 @@ footer {
   }
   
   .footer-logo2 {
-    color: var(--accent-color);
+    color: $accent-color;
     font-size: 26px;
     font-family: Raleway;
     line-height: normal;
@@ -50,7 +50,7 @@ footer {
   }
   
   .footer-address {
-    color: var(--accent-color);
+    color: $accent-color;
     font-size: 14px;
     font-weight: 400;
     line-height: 1.71;
@@ -63,7 +63,7 @@ footer {
   }
   
   .footer-email {
-    color: var(--additional-text-color);
+    color: $additional-text-color;
     font-size: 14px;
     font-weight: 400;
     line-height: 1.7;
@@ -76,7 +76,7 @@ footer {
   }
   
   .footer-phone {
-    color: var(--additional-text-color);
+    color: $additional-text-color;
     font-size: 14px;
     font-weight: 400;
     line-height: 1.7;
@@ -91,7 +91,7 @@ footer {
   }
   
   .footer-icon-subtitle {
-    color: #fff;
+    color: $accent-color;
     font-size: 14px;
     font-style: normal;
     font-weight: 700;
@@ -121,13 +121,13 @@ footer {
   
   .footer-contacts:hover,
   .footer-contacts:focus {
-    background-color: var(--hover-color);
+    background-color: $hover-color;
   }
   
   .footer-icon {
     width: 20px;
     height: 20px;
-    fill: var(--accent-color);
+    fill: $accent-color;
     cursor: pointer;
     padding: 12px;
   }
@@ -142,7 +142,7 @@ footer {
   }
   
   .basement-form-title {
-    color: #fff;
+    color: $accent-color;
     font-size: 14px;
     font-style: normal;
     font-weight: 700;
@@ -159,7 +159,7 @@ footer {
     flex-shrink: 0;
     border-radius: 4px;
     border: 1px solid rgba(255, 255, 255, 0.3);
-    background: rgba(33, 150, 243, 0);
+    background-color: rgba(33, 150, 243, 0);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     margin-right: 12px;
     padding-left: 16px;
@@ -181,7 +181,7 @@ footer {
     height: 50px;
     flex-shrink: 0;
     border-radius: 4px;
-    background: #2196f3;
+    background-color: #2196f3;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     color: #fff;
     text-align: left;
@@ -203,6 +203,6 @@ footer {
     margin-left: 10px;
     padding-top: 3px;
     padding-bottom: 3px;
-    fill: #fff;
+    fill: $accent-color;
   }
   
