--- a/sass/main-page/sections/_hero.scss
+++ b/sass/main-page/sections/_hero.scss
@@ -18,7 +18,7 @@
   }
   
   .hero-title {
-    color: var(--accent-color);
+    color: $accent-color;
     text-align: center;
     font-size: 44px;
     font-weight: 900;
@@ -33,7 +33,7 @@
   }
   
   .hero-button {
-    color: var(--accent-color);
+    color: $accent-color;
     text-align: center;
     font-family: Roboto;
     font-size: 16px;
@@ -44,7 +44,7 @@
     height: 50px;
     flex-shrink: 0;
     border-radius: 4px;
-    background: var(--hover-color);
+    background: $hover-color;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     cursor: pointer;
     padding: 10px 32px 10px 32px;
