--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "./base/reset";
 @import "./base/common";
 @import "./components/animations";
+@import "./utils/variables";
 @import "./components/header";
 @import "./main-page/sections/hero";
 @import "./main-page/sections/info";
