--- a/sass/portfolio-page/sections/_hero.scss
+++ b/sass/portfolio-page/sections/_hero.scss
@@ -16,12 +16,12 @@
   }
   
   .hero-button {
-    color: var(--text-color);
+    color: $text-color;
     text-align: center;
     font-size: 16px;
     line-height: 1.6;
     border-radius: 4px;
-    background: var(--background-color-ourteam);
+    background: $background-color-ourteam;
     padding: 6px 22px;
     outline: none;
     border: none;
@@ -33,12 +33,12 @@
   
   .hero-button:hover,
   .hero-button:focus {
-    color: var(--accent-color);
+    color: $accent-color;
     text-align: center;
     font-size: 16px;
     line-height: 1.6;
     border-radius: 4px;
-    background-color: var(--hover-color);
+    background-color: $hover-color;
     box-shadow: 0px 2px 2px 0px #0000001f, 0px 1px 2px 0px #00000014,
       0px 3px 1px 0px #0000001a;
   }
@@ -81,7 +81,7 @@
   
   .hero-poster:hover .hero-overlay-text,
   .hero-poster:focus .hero-overlay-text {
-    color: var(--accent-color);
+    color: $accent-color;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -101,7 +101,7 @@
   
   .hero-poster {
     flex-basis: calc((100% - 2 * 30px) / 3) ;
-    background-color: var(--accent-color);
+    background-color: $accent-color;
     border: 1px solid #eeeeee;
   }
   
@@ -126,7 +126,7 @@
   }
   
   .hero-subtext {
-    color: #FFF;
+    color: $accent-color;
     font-family: Roboto;
     font-size: 18px;
     font-style: normal;
@@ -143,7 +143,7 @@
   }
   
   .hero-title {
-    color: var(--text-color);
+    color: $text-color;
     font-size: 18px;
     font-weight: 700;
     line-height: 2;
@@ -156,7 +156,7 @@
   }
   
   .hero-text {
-    color: var(--additional-text-color);
+    color: $additional-text-color;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.8;
