--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,6 +1,6 @@
 @import "./base/common";
 @import "./base/reset";
-@import "./components/animations";
+@import "./utils/variables";
 @import "./components/animations";
 @import "./components/header";
 @import "./portfolio-page/sections/hero";
