--- a/css/main.css
+++ b/css/main.css
@@ -74,17 +74,6 @@ input {
   outline: none;
 }
 
-:root {
-  --accent-color: #ffffff;
-  --text-color: #212121;
-  --background-color-accent: #2f303a;
-  --background-color-ourteam: #f5f4fa;
-  --additional-text-color: #757575;
-  --hover-color: #2196f3;
-  --logo-text-color: #000;
-  --border-linia: #ececec;
-}
-
 body {
   font-family: Raleway, Roboto;
 }
@@ -132,11 +121,11 @@ body {
 .header {
   padding-top: 24px;
   padding-bottom: 25px;
-  background-color: var(--accent-color);
+  background-color: #ffffff;
   width: 100%;
   animation-name: from-up;
   animation-duration: 1s;
-  border: var(--border-linia) 1px solid;
+  border: #ececec 1px solid;
 }
 
 .header-container {
@@ -155,7 +144,7 @@ body {
 }
 
 .header-logo1 {
-  color: var(--hover-color);
+  color: #2196f3;
   font-size: 26px;
   line-height: normal;
   font-weight: 700;
@@ -164,7 +153,7 @@ body {
 }
 
 .header-logo2 {
-  color: var(--logo-text-color);
+  color: #000;
   font-size: 26px;
   line-height: normal;
   font-weight: 700;
@@ -180,7 +169,7 @@ body {
 }
 
 .header-link {
-  color: var(--text-color);
+  color: #212121;
   font-size: 14px;
   font-weight: 500;
   line-height: normal;
@@ -194,7 +183,7 @@ body {
 }
 
 .header-link:hover {
-  color: var(--hover-color);
+  color: #2196f3;
   font-size: 14px;
   font-weight: 500;
   line-height: normal;
@@ -202,7 +191,7 @@ body {
 }
 
 .header-link:focus {
-  color: var(--hover-color);
+  color: #2196f3;
   font-size: 14px;
   font-weight: 500;
   line-height: normal;
@@ -211,7 +200,7 @@ body {
 
 .header-link::after {
   display: block;
-  background-color: var(--hover-color);
+  background-color: #2196f3;
   position: absolute;
   bottom: -32px;
   right: 0px;
@@ -222,7 +211,7 @@ body {
   border-radius: 2px;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 250ms;
-  transition-property: var(--hover-color);
+  transition-property: #2196f3;
 }
 
 .header-item:hover .header-link::after {
@@ -237,7 +226,7 @@ body {
 .header-item2 {
   display: flex;
   align-items: center;
-  color: var(--additional-text-color);
+  color: #757575;
   font-weight: 500;
   letter-spacing: 0.02em;
   word-wrap: break-word;
@@ -247,16 +236,16 @@ body {
 }
 
 .header-item2:hover {
-  color: var(--hover-color);
+  color: #2196f3;
   cursor: pointer;
 }
 
 .header-item2:focus {
-  color: var(--hover-color);
+  color: #2196f3;
 }
 
 .header-contacts {
-  color: var(--additional-text-color);
+  color: #757575;
   font-size: 14px;
   font-weight: 500;
   line-height: normal;
@@ -271,7 +260,7 @@ body {
 }
 
 .header-contacts:hover {
-  color: var(--hover-color);
+  color: #2196f3;
   font-size: 14px;
   font-weight: 500;
   line-height: normal;
@@ -279,7 +268,7 @@ body {
 }
 
 .header-contacts:focus {
-  color: var(--hover-color);
+  color: #2196f3;
   font-size: 14px;
   font-weight: 500;
   line-height: normal;
@@ -290,7 +279,7 @@ body {
   width: 16px;
   height: 12px;
   margin-right: 10px;
-  fill: var(--additional-text-color);
+  fill: #757575;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: color, fill;
   transition-duration: 250ms;
@@ -300,7 +289,7 @@ body {
   width: 10px;
   height: 16px;
   margin-right: 10px;
-  fill: var(--additional-text-color);
+  fill: #757575;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-property: color, fill;
   transition-duration: 250ms;
@@ -332,7 +321,7 @@ body {
 }
 
 .hero-title {
-  color: var(--accent-color);
+  color: #ffffff;
   text-align: center;
   font-size: 44px;
   font-weight: 900;
@@ -347,7 +336,7 @@ body {
 }
 
 .hero-button {
-  color: var(--accent-color);
+  color: #ffffff;
   text-align: center;
   font-family: Roboto;
   font-size: 16px;
@@ -358,7 +347,7 @@ body {
   height: 50px;
   flex-shrink: 0;
   border-radius: 4px;
-  background: var(--hover-color);
+  background: #2196f3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   cursor: pointer;
   padding: 10px 32px 10px 32px;
@@ -385,7 +374,7 @@ body {
 .info-item::before {
   display: block;
   border-radius: 4px;
-  background: var(--background-color-ourteam);
+  background: #f5f4fa;
   padding: 25px 100px 25px 100px;
   width: 270px;
   height: 120px;
@@ -427,7 +416,7 @@ body {
 }
 
 .info-title {
-  color: var(--text-color);
+  color: #212121;
   font-family: Roboto;
   font-size: 14px;
   font-weight: 700;
@@ -438,7 +427,7 @@ body {
 }
 
 .info-text {
-  color: var(--additional-text-color);
+  color: #757575;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.7;
@@ -458,7 +447,7 @@ body {
 }
 
 .work-title {
-  color: var(--text-color);
+  color: #212121;
   font-family: Roboto;
   text-align: center;
   font-size: 36px;
@@ -494,7 +483,7 @@ body {
 }
 
 .work-text {
-  color: var(--accent-color);
+  color: #ffffff;
   text-align: center;
   font-size: 14px;
   font-weight: 700;
@@ -511,7 +500,7 @@ body {
 .team-section {
   padding-top: 94px;
   padding-bottom: 94px;
-  background-color: var(--background-color-ourteam);
+  background-color: #f5f4fa;
 }
 
 .team-container {
@@ -522,7 +511,7 @@ body {
 }
 
 .team-title {
-  color: var(--text-color);
+  color: #212121;
   text-align: center;
   font-size: 36px;
   font-weight: 700;
@@ -538,7 +527,7 @@ body {
 }
 
 .team-item {
-  background-color: var(--accent-color);
+  background-color: #ffffff;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.1411764706), 0px 1px 3px 0px rgba(0, 0, 0, 0.1215686275);
 }
 
@@ -547,7 +536,7 @@ body {
 }
 
 .team-name {
-  color: var(--text-color);
+  color: #212121;
   text-align: center;
   font-size: 16px;
   font-weight: 500;
@@ -558,7 +547,7 @@ body {
 }
 
 .team-job {
-  color: var(--additional-text-color);
+  color: #757575;
   text-align: center;
   font-size: 16px;
   font-weight: 400;
@@ -598,12 +587,12 @@ body {
 
 .team-contacts:hover,
 .team-contacts:focus {
-  background-color: var(--hover-color);
+  background-color: #2196f3;
 }
 
 .team-contacts:hover .team-icon,
 .team-contacts:focus .team-icon {
-  fill: var(--accent-color);
+  fill: #ffffff;
 }
 
 .team-icon {
@@ -618,7 +607,7 @@ body {
 }
 
 .team-icon:hover {
-  fill: var(--accent-color);
+  fill: #ffffff;
 }
 
 .customers-section {
@@ -627,7 +616,7 @@ body {
 }
 
 .customers-title {
-  color: var(--text-color);
+  color: #212121;
   text-align: center;
   font-family: Roboto;
   font-size: 36px;
@@ -657,13 +646,13 @@ body {
 
 .customers-contacts:hover,
 .customers-contacts:focus {
-  border: var(--hover-color) 1px solid;
+  border: #2196f3 1px solid;
 }
 
 .customers-contacts:hover .customers-icon,
 .customers-contacts:focus .customers-icon {
-  fill: var(--hover-color);
-  border: 1px solid var(--hover-color);
+  fill: #2196f3;
+  border: 1px solid #2196f3;
 }
 
 .customers-contacts:first-child,
@@ -693,11 +682,11 @@ body {
 }
 
 .customers-icon:hover {
-  fill: var(--hover-color);
+  fill: #2196f3;
 }
 
 footer {
-  background-color: var(--background-color-accent);
+  background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
   animation-name: from-down;
@@ -725,7 +714,7 @@ footer {
 }
 
 .footer-logo1 {
-  color: var(--hover-color);
+  color: #2196f3;
   font-size: 26px;
   font-family: Raleway;
   line-height: normal;
@@ -737,7 +726,7 @@ footer {
 }
 
 .footer-logo2 {
-  color: var(--accent-color);
+  color: #ffffff;
   font-size: 26px;
   font-family: Raleway;
   line-height: normal;
@@ -748,7 +737,7 @@ footer {
 }
 
 .footer-address {
-  color: var(--accent-color);
+  color: #ffffff;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.71;
@@ -761,7 +750,7 @@ footer {
 }
 
 .footer-email {
-  color: var(--additional-text-color);
+  color: #757575;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.7;
@@ -774,7 +763,7 @@ footer {
 }
 
 .footer-phone {
-  color: var(--additional-text-color);
+  color: #757575;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.7;
@@ -789,7 +778,7 @@ footer {
 }
 
 .footer-icon-subtitle {
-  color: #fff;
+  color: #ffffff;
   font-size: 14px;
   font-style: normal;
   font-weight: 700;
@@ -820,13 +809,13 @@ footer {
 
 .footer-contacts:hover,
 .footer-contacts:focus {
-  background-color: var(--hover-color);
+  background-color: #2196f3;
 }
 
 .footer-icon {
   width: 20px;
   height: 20px;
-  fill: var(--accent-color);
+  fill: #ffffff;
   cursor: pointer;
   padding: 12px;
 }
@@ -841,7 +830,7 @@ footer {
 }
 
 .basement-form-title {
-  color: #fff;
+  color: #ffffff;
   font-size: 14px;
   font-style: normal;
   font-weight: 700;
@@ -858,7 +847,7 @@ footer {
   flex-shrink: 0;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
-  background: rgba(33, 150, 243, 0);
+  background-color: rgba(33, 150, 243, 0);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   margin-right: 12px;
   padding-left: 16px;
@@ -890,7 +879,7 @@ footer {
   height: 50px;
   flex-shrink: 0;
   border-radius: 4px;
-  background: #2196f3;
+  background-color: #2196f3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #fff;
   text-align: left;
@@ -912,7 +901,7 @@ footer {
   margin-left: 10px;
   padding-top: 3px;
   padding-bottom: 3px;
-  fill: #fff;
+  fill: #ffffff;
 }
 
 .backdrop {
@@ -943,7 +932,7 @@ footer {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 4px;
-  background-color: #fff;
+  background-color: #ffffff;
   padding: 40px;
 }
 
@@ -961,7 +950,7 @@ footer {
   height: 30px;
   border: solid 1px;
   border-radius: 50%;
-  color: #fff;
+  color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -973,7 +962,7 @@ footer {
 }
 
 .modal-close-button:hover {
-  fill: var(--hover-color);
+  fill: #2196f3;
 }
 
 .modal-close-icon {
@@ -982,11 +971,11 @@ footer {
 }
 
 .modal-close-icon:hover {
-  fill: var(--hover-color);
+  fill: #2196f3;
 }
 
 .modal-title {
-  color: var(--text-color);
+  color: #212121;
   text-align: center;
   font-size: 20px;
   font-weight: 700;
@@ -1010,7 +999,7 @@ footer {
 }
 
 .modal-label {
-  color: var(--additional-text-color);
+  color: #757575;
   font-size: 12px;
   font-weight: 400;
   line-height: normal;
@@ -1030,8 +1019,8 @@ footer {
 }
 
 .modal-input:hover {
-  fill: var(--hover-color);
-  border-color: var(--hover-color);
+  fill: #2196f3;
+  border-color: #2196f3;
 }
 
 .modal-input1 {
@@ -1042,7 +1031,7 @@ footer {
   height: 96px;
   padding: 12px 16px 65px 16px;
   text-align: left;
-  color: var(--text-color);
+  color: #212121;
   font-size: 12px;
   font-weight: 400;
   line-height: 14px;
@@ -1053,8 +1042,8 @@ footer {
 }
 
 .modal-input:hover {
-  fill: var(--hover-color);
-  border-color: var(--hover-color);
+  fill: #2196f3;
+  border-color: #2196f3;
 }
 
 .modal-icon {
@@ -1069,15 +1058,15 @@ footer {
 }
 
 .modal-icon:hover {
-  fill: var(--hover-color);
-  border-color: var(--hover-color);
+  fill: #2196f3;
+  border-color: #2196f3;
 }
 
 .modal-item:hover .modal-icon,
 .modal-item:hover .modal-input,
 .modal-item:hover .modal-input1 {
-  fill: var(--hover-color);
-  border-color: var(--hover-color);
+  fill: #2196f3;
+  border-color: #2196f3;
 }
 
 .modal-agrees {
@@ -1094,18 +1083,18 @@ footer {
 }
 
 .modal-label-agrees {
-  color: var(--additional-text-color);
+  color: #757575;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 171.429% */
+  line-height: 24px;
   letter-spacing: 0.42px;
   margin-left: 7px;
   margin-right: 5px;
 }
 
 .modal-agrees-link {
-  color: var(--hover-color);
+  color: #2196f3;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -1118,13 +1107,13 @@ footer {
   width: 200px;
   height: 50px;
   border-radius: 4px;
-  background-color: var(--hover-color);
+  background-color: #2196f3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #fff;
   text-align: center;
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
-  line-height: 30px; /* 187.5% */
+  line-height: 30px;
   letter-spacing: 0.96px;
 }/*# sourceMappingURL=main.css.map */
