--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,21 +1,20 @@
-:root {
-    --accent-color: #ffffff;
-    --text-color: #212121;
-    --background-color-accent: #2f303a;
-    --background-color-ourteam: #f5f4fa;
-    --additional-text-color: #757575;
-    --hover-color: #2196f3;
-    --logo-text-color: #000;
-    --border-linia: #ececec;
-  }
+// :root {
+//   --accent-color: #ffffff;
+//   --text-color: #212121;
+//   --background-color-accent: #2f303a;
+//   --background-color-ourteam: #f5f4fa;
+//   --additional-text-color: #757575;
+//   --hover-color: #2196f3;
+//   --logo-text-color: #000;
+//   --border-linia: #ececec;
+// }
 
-  body {
-    font-family: Raleway, Roboto;
-  }
+body {
+  font-family: Raleway, Roboto;
+}
 
-  .container {
-    width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
-  }
-  
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
