--- a/sass/main-page/sections/_info.scss
+++ b/sass/main-page/sections/_info.scss
@@ -16,7 +16,7 @@
   .info-item::before {
     display: block;
     border-radius: 4px;
-    background: var(--background-color-ourteam);
+    background: $background-color-ourteam;
     padding: 25px 100px 25px 100px;
     width: 270px;
     height: 120px;
@@ -58,7 +58,7 @@
   }
   
   .info-title {
-    color: var(--text-color);
+    color: $text-color;
     font-family: Roboto;
     font-size: 14px;
     font-weight: 700;
@@ -69,7 +69,7 @@
   }
   
   .info-text {
-    color: var(--additional-text-color);
+    color: $additional-text-color;
     font-size: 14px;
     font-weight: 400;
     line-height: 1.7;
