--- a/sass/main-page/sections/_modal.scss
+++ b/sass/main-page/sections/_modal.scss
@@ -25,7 +25,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 4px;
-    background-color: #fff;
+    background-color: $accent-color;
     padding: 40px;
   }
   
@@ -43,7 +43,7 @@
     height: 30px;
     border: solid 1px;
     border-radius: 50%;
-    color: #fff;
+    color: $accent-color;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -55,7 +55,7 @@
   }
   
   .modal-close-button:hover {
-    fill: var(--hover-color);
+    fill: $hover-color;
   }
   
   .modal-close-icon {
@@ -64,11 +64,11 @@
   }
   
   .modal-close-icon:hover {
-    fill: var(--hover-color);
+    fill: $hover-color;
   }
   
   .modal-title {
-    color: var(--text-color);
+    color: $text-color;
     text-align: center;
     font-size: 20px;
     font-weight: 700;
@@ -92,7 +92,7 @@
   }
   
   .modal-label {
-    color: var(--additional-text-color);
+    color: $additional-text-color;
     font-size: 12px;
     font-weight: 400;
     line-height: normal;
@@ -112,8 +112,8 @@
   }
   
   .modal-input:hover {
-    fill: var(--hover-color);
-    border-color: var(--hover-color);
+    fill: $hover-color;
+    border-color: $hover-color;
   }
   
   .modal-input1 {
@@ -124,7 +124,7 @@
     height: 96px;
     padding: 12px 16px 65px 16px;
     text-align: left;
-    color: var(--text-color);
+    color: $text-color;
     font-size: 12px;
     font-weight: 400;
     line-height: 14px;
@@ -135,8 +135,8 @@
   }
   
   .modal-input:hover {
-    fill: var(--hover-color);
-    border-color: var(--hover-color);
+    fill: $hover-color;
+    border-color: $hover-color;
   }
   
   .modal-icon {
@@ -151,15 +151,15 @@
   }
   
   .modal-icon:hover{
-    fill: var(--hover-color);
-    border-color: var(--hover-color);
+    fill: $hover-color;
+    border-color: $hover-color;
   }
   
   .modal-item:hover .modal-icon,
   .modal-item:hover .modal-input,
   .modal-item:hover .modal-input1  {
-    fill: var(--hover-color);
-    border-color: var(--hover-color);
+    fill: $hover-color;
+    border-color: $hover-color;
   }
   
   .modal-agrees {
@@ -176,18 +176,18 @@
   }
   
   .modal-label-agrees {
-    color: var(--additional-text-color);
+    color: $additional-text-color;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 24px; /* 171.429% */
+    line-height: 24px;
     letter-spacing: 0.42px;
     margin-left: 7px;
     margin-right: 5px;
   }
   
   .modal-agrees-link {
-    color: var(--hover-color);
+    color: $hover-color;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -200,14 +200,14 @@
     width: 200px;
     height: 50px;
     border-radius: 4px;
-    background-color: var(--hover-color);
+    background-color: $hover-color;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     color: #fff;
     text-align: center;
     font-size: 16px;
     font-style: normal;
     font-weight: 700;
-    line-height: 30px; /* 187.5% */
+    line-height: 30px;
     letter-spacing: 0.96px;
   }
   
